feat: adicionar testes de integração para consulta de filmes